add in more stuff for strand feed. background script and feed

--- a/peanut/strand/templates/strand/neighbors.html
+++ b/peanut/strand/templates/strand/neighbors.html
@@ -165,7 +165,7 @@
 			Main code here
 		*/
 		var userId = getURLParameter("user_id");
-		var url = "/strand/api/neighbors?user_id=" + userId;
+		var url = "/strand/api/strand_feed?user_id=" + userId;
 		var oldData;
 		
 		$(document).ready(function(){
