--- a/strand/iOS/Strand/Strand/DFPhotoFeedCell.xib
+++ b/strand/iOS/Strand/Strand/DFPhotoFeedCell.xib
@@ -7,21 +7,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="482" id="KGk-i7-Jjw" customClass="DFPhotoFeedCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="483"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="524" id="KGk-i7-Jjw" customClass="DFPhotoFeedCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="525"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="482"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HE2-Vf-wok">
-                        <rect key="frame" x="10" y="13" width="258" height="16"/>
+                        <rect key="frame" x="10" y="13" width="248" height="16"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="13"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="favoritersList" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v5m-xw-TWf" userLabel="favoritersList">
-                        <rect key="frame" x="10" y="440" width="300" height="17"/>
+                        <rect key="frame" x="10" y="439.5" width="300" height="17"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="17" id="3VC-kh-nlc"/>
                         </constraints>
@@ -40,7 +40,7 @@
                         </constraints>
                     </imageView>
                     <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.80000000000000004" contentMode="scaleToFill" restorationIdentifier="collectionView" showsVerticalScrollIndicator="NO" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="h07-n4-DgV">
-                        <rect key="frame" x="0.0" y="353" width="320" height="79"/>
+                        <rect key="frame" x="0.0" y="352.5" width="320" height="79"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="79" id="32E-5a-0uW"/>
                         </constraints>
@@ -53,13 +53,13 @@
                         <cells/>
                     </collectionView>
                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="6Gw-h8-Can">
-                        <rect key="frame" x="150" y="172" width="20" height="20"/>
+                        <rect key="frame" x="150" y="187.5" width="20" height="20"/>
                     </activityIndicatorView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="U1S-w6-Jtc" userLabel="Actions bar">
-                        <rect key="frame" x="0.0" y="465" width="320" height="29"/>
+                        <rect key="frame" x="10" y="464" width="300" height="29"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="fST-z5-7nz" userLabel="favoriteButton" customClass="DFRoundedButton">
-                                <rect key="frame" x="8" y="0.0" width="111" height="29"/>
+                                <rect key="frame" x="0.0" y="0.0" width="111" height="29"/>
                                 <color key="backgroundColor" red="0.84313732385635376" green="0.84313732385635376" blue="0.84313732385635376" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="111" id="hSJ-ta-uUY"/>
@@ -77,7 +77,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="B5M-0I-S31" userLabel="moreOptionsButton" customClass="DFRoundedButton">
-                                <rect key="frame" x="282" y="0.0" width="30" height="29"/>
+                                <rect key="frame" x="270" y="0.0" width="30" height="29"/>
                                 <color key="backgroundColor" red="0.84313732389999996" green="0.84313732389999996" blue="0.84313732389999996" alpha="1" colorSpace="deviceRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="gdO-FC-ViP"/>
@@ -101,13 +101,13 @@
                             <constraint firstAttribute="bottom" secondItem="B5M-0I-S31" secondAttribute="bottom" id="DMp-wp-l01"/>
                             <constraint firstAttribute="bottom" secondItem="fST-z5-7nz" secondAttribute="bottom" id="Eme-SH-pyu"/>
                             <constraint firstItem="B5M-0I-S31" firstAttribute="top" secondItem="U1S-w6-Jtc" secondAttribute="top" id="YiK-hw-Rjb"/>
-                            <constraint firstAttribute="trailing" secondItem="B5M-0I-S31" secondAttribute="trailing" constant="8" id="Ypw-2h-UIb"/>
-                            <constraint firstItem="fST-z5-7nz" firstAttribute="leading" secondItem="U1S-w6-Jtc" secondAttribute="leading" constant="8" id="a4I-cQ-wqz"/>
+                            <constraint firstAttribute="trailing" secondItem="B5M-0I-S31" secondAttribute="trailing" id="Ypw-2h-UIb"/>
+                            <constraint firstItem="fST-z5-7nz" firstAttribute="leading" secondItem="U1S-w6-Jtc" secondAttribute="leading" id="a4I-cQ-wqz"/>
                             <constraint firstAttribute="height" constant="29" id="kOJ-Yo-7ov"/>
                         </constraints>
                     </view>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25m" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xhR-gV-Znx">
-                        <rect key="frame" x="268" y="13" width="52" height="16"/>
+                        <rect key="frame" x="258" y="13" width="52" height="16"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="kFk-Pv-TAS"/>
@@ -123,20 +123,20 @@
                     <constraint firstAttribute="trailing" secondItem="h07-n4-DgV" secondAttribute="trailing" id="07M-SB-Mi0"/>
                     <constraint firstItem="xhR-gV-Znx" firstAttribute="leading" secondItem="HE2-Vf-wok" secondAttribute="trailing" id="1YF-IO-PF8"/>
                     <constraint firstItem="U1S-w6-Jtc" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" priority="900" constant="8" id="BMx-TO-HYc"/>
-                    <constraint firstAttribute="trailing" secondItem="U1S-w6-Jtc" secondAttribute="trailing" id="EAA-NR-agd"/>
+                    <constraint firstAttribute="trailing" secondItem="xhR-gV-Znx" secondAttribute="trailing" constant="10" id="DBh-P5-CPz"/>
+                    <constraint firstAttribute="trailing" secondItem="U1S-w6-Jtc" secondAttribute="trailing" constant="10" id="EAA-NR-agd"/>
                     <constraint firstItem="h07-n4-DgV" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" constant="1" id="Q48-yN-yzu"/>
                     <constraint firstItem="U1S-w6-Jtc" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="800" constant="8" id="S0e-fU-RBu"/>
                     <constraint firstAttribute="trailing" secondItem="v5m-xw-TWf" secondAttribute="trailing" constant="10" id="U2a-H5-vDZ"/>
                     <constraint firstAttribute="centerX" secondItem="EPr-aP-pSV" secondAttribute="centerX" id="UMD-W8-k6d"/>
                     <constraint firstItem="h07-n4-DgV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="W57-RD-aTX"/>
-                    <constraint firstItem="EPr-aP-pSV" firstAttribute="trailing" secondItem="xhR-gV-Znx" secondAttribute="trailing" id="XFh-2m-JaH"/>
                     <constraint firstItem="v5m-xw-TWf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="emp-ho-p4y"/>
                     <constraint firstItem="EPr-aP-pSV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="32" id="fDr-AQ-CiI"/>
                     <constraint firstItem="EPr-aP-pSV" firstAttribute="top" secondItem="HE2-Vf-wok" secondAttribute="bottom" constant="3" id="flS-ZR-bpc"/>
                     <constraint firstItem="v5m-xw-TWf" firstAttribute="top" secondItem="h07-n4-DgV" secondAttribute="bottom" constant="8" id="kcq-eS-SKN"/>
                     <constraint firstItem="HE2-Vf-wok" firstAttribute="centerY" secondItem="xhR-gV-Znx" secondAttribute="centerY" id="n4h-3S-fks"/>
                     <constraint firstItem="HE2-Vf-wok" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="o1z-cd-LaE"/>
-                    <constraint firstItem="U1S-w6-Jtc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="qjF-xY-N9B"/>
+                    <constraint firstItem="U1S-w6-Jtc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="qjF-xY-N9B"/>
                     <constraint firstItem="v5m-xw-TWf" firstAttribute="top" secondItem="EPr-aP-pSV" secondAttribute="bottom" priority="900" constant="8" id="u3r-jO-EWn"/>
                     <constraint firstItem="U1S-w6-Jtc" firstAttribute="top" secondItem="v5m-xw-TWf" secondAttribute="bottom" constant="8" id="v2A-sz-rMw"/>
                 </constraints>
