--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -86,7 +86,7 @@
 				<td class='strands b-r'> Strands </td>
 				<td class='status b-r' title='All | Thumbs | Fulls | Clustered || withGPS | Twofish | Neighbors'> Pipeline <br> Status </td>
 				<td class='actions b-r'> Actions </td>
-				<td class='notifications b-r'> Nots <br> sent </td>
+				<td class='notifications b-r'> Nots sent <br> (7 days)</td>
 				<td class='last-not-timestamp b-r'> Last Not. <br> Timestamp </td>
 				<td class='location b-r'> Location </td>
 				<td class='location-timestamp b-r'> Location <br> Timestamp </td>
