removed references to neighbor for strands

--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -84,7 +84,7 @@
 				<td class='created b-r'> Created </td>
 				<td class='db-count b-r'> Photos </td>
 				<td class='strands b-r'> Strands </td>
-				<td class='status b-r' title='All | Thumbs | Fulls | Clustered || withGPS | Twofish | Neighbors'> Pipeline <br> Status </td>
+				<td class='status b-r' title='All | Thumbs | Fulls | Clustered || withGPS | Twofish | Strand'> Pipeline <br> Status </td>
 				<td class='actions b-r'> Actions </td>
 				<td class='notifications b-r'> Nots sent <br> (7 days)</td>
 				<td class='last-not-timestamp b-r'> Last Not. <br> Timestamp </td>
