--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="refresh" content="60">
-	<title>Duffy Summary</title> 
+	<title>Strand ({{ strandList|length }})</title> 
 </head>
 <style>
 	html, body { padding: 0; margin: 0; font-family: arial; font-size: 12px;}
