--- a/strand/iOS/Strand/Strand/DFWebViewController.xib
+++ b/strand/iOS/Strand/Strand/DFWebViewController.xib
@@ -23,7 +23,7 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 </webView>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aYg-3M-q4W">
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aYg-3M-q4W">
                     <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <items>
@@ -51,6 +51,11 @@
                 </toolbar>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="aYg-3M-q4W" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="4S2-46-WEA"/>
+                <constraint firstAttribute="trailing" secondItem="aYg-3M-q4W" secondAttribute="trailing" id="8Qa-Kg-yTO"/>
+                <constraint firstAttribute="bottom" secondItem="aYg-3M-q4W" secondAttribute="bottom" id="mwY-Ki-BaC"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
