--- a/strand/iOS/Strand/Strand/DFNotificationTableViewCell.xib
+++ b/strand/iOS/Strand/Strand/DFNotificationTableViewCell.xib
@@ -13,31 +13,48 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbZ-Mo-ouN">
-                        <rect key="frame" x="49" y="11" width="46" height="21"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Henry" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zbZ-Mo-ouN">
+                        <rect key="frame" x="50" y="13" width="39" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Action text" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hut-qw-Arg">
-                        <rect key="frame" x="103" y="11" width="83" height="21"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="liked your photo" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="105" translatesAutoresizingMaskIntoConstraints="NO" id="Hut-qw-Arg">
+                        <rect key="frame" x="93" y="13" width="105" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tYt-vb-EcO">
-                        <rect key="frame" x="278" y="11" width="38" height="21"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tYt-vb-EcO">
+                        <rect key="frame" x="278" y="13" width="38" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="38" id="YAL-dq-sNh"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OPm-BO-0DI">
-                        <rect key="frame" x="4" y="1" width="42" height="42"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OPm-BO-0DI">
+                        <rect key="frame" x="0.0" y="1" width="42" height="42"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="42" id="Yzh-ym-gOH"/>
+                        </constraints>
                     </imageView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="tYt-vb-EcO" secondAttribute="trailing" constant="4" id="Dbi-yK-zF7"/>
+                    <constraint firstAttribute="centerY" secondItem="tYt-vb-EcO" secondAttribute="centerY" id="G9K-4F-dzw"/>
+                    <constraint firstItem="zbZ-Mo-ouN" firstAttribute="leading" secondItem="OPm-BO-0DI" secondAttribute="trailing" constant="8" id="JfT-YA-A9C"/>
+                    <constraint firstAttribute="centerY" secondItem="Hut-qw-Arg" secondAttribute="centerY" id="OpA-iZ-rVh"/>
+                    <constraint firstItem="Hut-qw-Arg" firstAttribute="leading" secondItem="zbZ-Mo-ouN" secondAttribute="trailing" constant="4" id="PKc-lh-tvt"/>
+                    <constraint firstItem="OPm-BO-0DI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Rev-6f-AMb"/>
+                    <constraint firstItem="OPm-BO-0DI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="1" id="YZW-uX-hWU"/>
+                    <constraint firstAttribute="bottom" secondItem="OPm-BO-0DI" secondAttribute="bottom" id="ZtW-eb-9tM"/>
+                    <constraint firstAttribute="centerY" secondItem="zbZ-Mo-ouN" secondAttribute="centerY" id="jBo-nS-rs7"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="descriptionLabel" destination="Hut-qw-Arg" id="D0A-bd-fRD"/>
