--- a/strand/iOS/Strand/Strand/DuffyCore/DFPhotoStackCell.xib
+++ b/strand/iOS/Strand/Strand/DuffyCore/DFPhotoStackCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -14,7 +14,7 @@
                     <rect key="frame" x="0.0" y="0.0" width="77" height="77"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
-                <imageView opaque="NO" userInteractionEnabled="NO" alpha="0.79999999999999982" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons/PhotoStackOverlay.png" translatesAutoresizingMaskIntoConstraints="NO" id="1dA-2O-3kS" userLabel="overlayImageView">
+                <imageView opaque="NO" userInteractionEnabled="NO" alpha="0.79999999999999982" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/PhotoStackOverlay.png" translatesAutoresizingMaskIntoConstraints="NO" id="1dA-2O-3kS" userLabel="overlayImageView">
                     <rect key="frame" x="0.0" y="0.0" width="77" height="77"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
@@ -54,6 +54,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Icons/PhotoStackOverlay.png" width="16" height="16"/>
+        <image name="Assets/Icons/PhotoStackOverlay.png" width="16" height="16"/>
     </resources>
 </document>
