--- a/strand/iOS/Strand/Strand/DuffyCore/DFPhotoViewCell.xib
+++ b/strand/iOS/Strand/Strand/DuffyCore/DFPhotoViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -14,9 +14,19 @@
                     <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
+                <imageView hidden="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Icons/LikeOnGalleryIcon" translatesAutoresizingMaskIntoConstraints="NO" id="TUZ-FC-zJG">
+                    <rect key="frame" x="4" y="101" width="15" height="15"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="15" id="8RO-Vo-VJC"/>
+                        <constraint firstAttribute="height" constant="15" id="mXG-pu-npc"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="2gT-dn-UU6" secondAttribute="trailing" id="P3Z-Ut-YxP"/>
+                <constraint firstAttribute="bottom" secondItem="TUZ-FC-zJG" secondAttribute="bottom" constant="4" id="XjO-je-3AU"/>
+                <constraint firstItem="TUZ-FC-zJG" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="4" id="mcK-kD-M62"/>
                 <constraint firstAttribute="bottom" secondItem="2gT-dn-UU6" secondAttribute="bottom" id="qgQ-L9-sD2"/>
                 <constraint firstItem="2gT-dn-UU6" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="wIE-LC-HI3"/>
                 <constraint firstItem="2gT-dn-UU6" firstAttribute="top" secondItem="1" secondAttribute="top" id="xez-Rp-y9J"/>
@@ -24,7 +34,11 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="imageView" destination="2gT-dn-UU6" id="nAC-fk-qaT"/>
+                <outlet property="likeOnImageView" destination="TUZ-FC-zJG" id="5Lq-sq-LOG"/>
             </connections>
         </view>
     </objects>
+    <resources>
+        <image name="Assets/Icons/LikeOnGalleryIcon" width="16" height="16"/>
+    </resources>
 </document>
